Fix missing package.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-jscs": "^3.0.2",
     "gulp-jshint": "^2.0.0",
     "gulp-mocha": "^2.2.0",
+    "gulp-util": "^3.0.7",
     "gutil": "^1.6.4",
     "jshint": "^2.8.0",
     "rcloader": "^0.1.4"
