--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babelify-external-helpers",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Babelify external helpers packager.",
   "main": "./bin/babelify-external-helpers.js",
   "scripts": {
@@ -22,7 +22,6 @@
   "author": "Brenden Snyder <rstone770@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.3.26",
     "babel-plugin-external-helpers-2": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
@@ -44,5 +43,9 @@
     "insert-module-globals": "^7.0.1",
     "through2": "^2.0.0",
     "xtend": "^4.0.1"
+  },
+  "peerDependencies": {
+    "babelify": "7.x",
+    "babel-core": "6.x"
   }
 }
