--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babelify-external-helpers",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Babelify external helpers packager.",
   "main": "./bin/babelify-external-helpers.js",
   "scripts": {
@@ -29,6 +29,7 @@
     "chai": "^3.4.1",
     "colors": "^1.1.2",
     "concat-stream": "^1.5.1",
+    "es3ify": "^0.1.4",
     "glob": "^6.0.2",
     "gulp": "^3.9.0",
     "gulp-jscs": "^3.0.2",
@@ -45,7 +46,6 @@
     "xtend": "^4.0.1"
   },
   "peerDependencies": {
-    "babelify": "7.x",
     "babel-core": "6.x"
   }
 }
