--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "babelify-external-helpers",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "Babelify external helpers packager.",
   "main": "./bin/babelify-external-helpers.js",
   "scripts": {
-    "ci": "npm run-script lint && npm run-script test",
-    "lint": "node ./node_modules/gulp/bin/gulp.js",
-    "test": "node ./node_modules/gulp/bin/gulp.js test"
+    "build": "babel ./source --out-dir ./bin",
+    "prepublish": "npm run build"
   },
   "keywords": [
     "browserify",
@@ -22,30 +21,15 @@
   "author": "Brenden Snyder <rstone770@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel-plugin-external-helpers-2": "^6.3.13",
-    "babel-preset-es2015": "^6.3.13",
-    "babelify": "^7.2.0",
-    "browserify": "^12.0.1",
-    "chai": "^3.4.1",
-    "colors": "^1.1.2",
-    "concat-stream": "^1.5.1",
-    "es3ify": "^0.1.4",
-    "glob": "^6.0.2",
-    "gulp": "^3.9.0",
-    "gulp-jscs": "^3.0.2",
-    "gulp-jshint": "^2.0.0",
-    "gulp-mocha": "^2.2.0",
-    "gulp-util": "^3.0.7",
-    "gutil": "^1.6.4",
-    "jshint": "^2.8.0",
-    "rcloader": "^0.1.4"
-  },
-  "dependencies": {
-    "insert-module-globals": "^7.0.1",
-    "through2": "^2.0.0",
-    "xtend": "^4.0.1"
+    "babel-cli": "^6.23.0",
+    "babel-core": "^6.23.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "through2": "^2.0.3"    
   },
   "peerDependencies": {
-    "babel-core": "6.x"
+    "babel-core": "^6.23.1",
+    "babelify": "^7.3.0"
   }
 }
